// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Actions it should DELETE a note 1`] = `
Array [
  Object {
    "type": "users/delete-user-pending",
  },
  Object {
    "error": null,
    "payload": undefined,
    "type": "users/delete-user-success",
  },
]
`;

exports[`User Actions it should GET a user 1`] = `
Array [
  Object {
    "type": "users/get-user-pending",
  },
  Object {
    "error": null,
    "payload": Object {
      "_id": "5e0bb5c61c90231c34596f83",
      "email": "alexkim@dev.com",
      "name": "Alex Kim",
      "role": "ADMIN",
    },
    "type": "users/get-user-success",
  },
]
`;

exports[`User Actions it should GET users 1`] = `
Array [
  Object {
    "type": "users/get-users-pending",
  },
  Object {
    "error": null,
    "payload": Array [
      Object {
        "_id": "5e0bb5c61c90231c34596f83",
        "email": "alexkim@dev.com",
        "name": "Alex Kim",
        "role": "ADMIN",
      },
    ],
    "type": "users/get-users-success",
  },
]
`;

exports[`User Actions it should LOGIN a user 1`] = `
Array [
  Object {
    "type": "users/login-pending",
  },
  Object {
    "error": null,
    "payload": Object {
      "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE1Nzg1NDYxMjUsImlhdCI6MTU3Nzk0MTMyNX0.ksgtQ8uDQ3322tOhQ4jIkzZjH6B0luhLA1NRKGCG00w",
      "user": Object {
        "_id": "5e0bb5c61c90231c34596f83",
        "email": "alexkim@dev.com",
        "name": "Alex Kim",
        "role": "ADMIN",
      },
    },
    "type": "users/login-success",
  },
]
`;

exports[`User Actions it should LOGOUT a user 1`] = `
Array [
  Object {
    "type": "users/logout-success",
  },
]
`;

exports[`User Actions it should REGISTER a user 1`] = `
Array [
  Object {
    "type": "users/register-pending",
  },
  Object {
    "error": null,
    "payload": Object {
      "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE1Nzg1NDYxMjUsImlhdCI6MTU3Nzk0MTMyNX0.ksgtQ8uDQ3322tOhQ4jIkzZjH6B0luhLA1NRKGCG00w",
      "user": Object {
        "_id": "5e0bb5c61c90231c34596f83",
        "email": "alexkim@dev.com",
        "name": "Alex Kim",
        "role": "ADMIN",
      },
    },
    "type": "users/register-success",
  },
]
`;

exports[`User Actions it should UPDATE a user 1`] = `
Array [
  Object {
    "type": "users/update-user-pending",
  },
  Object {
    "error": null,
    "payload": Object {
      "_id": "5e0bb5c61c90231c34596f83",
      "email": "alexkim@dev.com",
      "name": "Alex Kim",
      "role": "ADMIN",
    },
    "type": "users/update-user-success",
  },
]
`;
